# gpgpu

./: CMakeLists.txt  LICENSE  README.md  main.cpp
include/gpgpu/: Buffer.hpp  Context.hpp  Framebuffer.hpp  OpenGLObject.hpp  Program.hpp  Texture.hpp
